Add YT API Routing
Added NavBar Yt Subscription  chapters buttons quiz card [Need to add stripe]

--- a/learning-ai/.env
+++ b/learning-ai/.env
@@ -8,3 +8,9 @@ DATABASE_URL="mysql://johndoe:randompassword@localhost:3306/mydb"
 NEXTAUTH_SECRET="NeedToUpdate"
 GOOGLE_CLIENT_ID="665139984275-mq0ib1ls733bp13adbdmdfdcdj45cmgg.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
+OPENAI_API_KEY="WILL UPDATE"
+UNSPLASH_API_KEY="hUGL-mh6StSJ4u2Hyjc3QN6bmkXBpnFGdJun0Yr2h9g"
+
+YOUTUBE_API_KEY="AIzaSyDqMmwSgXnQlLuxKWJHaVNPIlJO0oMnnQk"
+STRIPE_API_KEY=""
+//42811
