--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lucide-react": "^0.277.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
+    "next-themes": "^0.2.1",
     "openai": "^3.3.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
